# roadrpc

./: AGENTS.md  README.md  pyproject.toml
src/roadrpc/: __init__.py  rpc.py
